[package]
name = "rsts"
version = "0.2.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"
description = "Convert Rust types to TypeScript"
repository = "https://github.com/nicholasbishop/rsts"
license = "Apache-2.0"

[dependencies]
clap = "2.32"
syn = { version = "0.15", features = [ "extra-traits", "full" ] }
